--- a/style.css
+++ b/style.css
@@ -48,7 +48,11 @@ body {
   font-size: 1.25em;
   background-color: floralwhite;
   color: black;
-  width: 80%;
+  width: 70%;
+}
+
+.search i {
+  font-size: 1.5em;
 }
 
 .search button {
@@ -70,7 +74,6 @@ h2 {
 
 p {
   font-size: 1.25em;
-  font-weight: bold;
 }
 
 .det {
@@ -156,7 +159,11 @@ img:hover {
   }
 
   .search button {
-    font-size: 1.75em;
+    font-size: 1em;
+  }
+
+  .fa-map-marker-alt {
+    font-size: 1.25em;
   }
 
   h1 {
@@ -196,7 +203,11 @@ img:hover {
   }
 
   .search button {
-    font-size: 2em;
+    font-size: 1.5em;
+  }
+
+  .fa-map-marker-alt {
+    font-size: 1.5em;
   }
 
   h1 {
